// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`existing snippet data should render team AddSnippet with snippet 1`] = `
<form
  className="add-snippet"
  id="add-snippet-form"
  onSubmit={[Function]}
>
  <div
    className="add-snippet__input add-snippet__shortcut"
    contentEditable={true}
    data-placeholder="Key"
    data-team="team"
    onCopy={[Function]}
    onPaste={[Function]}
    suppressContentEditableWarning={true}
  >
    .team
  </div>
  <div
    className="add-snippet__input add-snippet__text"
    contentEditable={true}
    data-placeholder="Snippet"
    data-team="team"
    onCopy={[Function]}
    onPaste={[Function]}
  />
  <button
    className="btn btn--secondary btn--shine btn--add"
    type="submit"
  >
    +
  </button>
</form>
`;

exports[`existing snippet data should render user AddSnippet with snippet 1`] = `
<form
  className="add-snippet"
  id="add-snippet-form"
  onSubmit={[Function]}
>
  <div
    className="add-snippet__input add-snippet__shortcut"
    contentEditable={true}
    data-placeholder="Key"
    onCopy={[Function]}
    onPaste={[Function]}
    suppressContentEditableWarning={true}
  >
    .user
  </div>
  <div
    className="add-snippet__input add-snippet__text"
    contentEditable={true}
    data-placeholder="Snippet"
    onCopy={[Function]}
    onPaste={[Function]}
  />
  <button
    className="btn btn--secondary btn--shine btn--add"
    type="submit"
  >
    +
  </button>
</form>
`;

exports[`team snippets page should render AddSnippet for team page 1`] = `
<form
  className="add-snippet"
  id="add-snippet-form"
  onSubmit={[Function]}
>
  <div
    className="add-snippet__input add-snippet__shortcut"
    contentEditable={true}
    data-placeholder="Key"
    data-team="team"
    onCopy={[Function]}
    onPaste={[Function]}
    suppressContentEditableWarning={true}
  />
  <div
    className="add-snippet__input add-snippet__text"
    contentEditable={true}
    data-placeholder="Snippet"
    data-team="team"
    onCopy={[Function]}
    onPaste={[Function]}
  />
  <button
    className="btn btn--secondary btn--shine btn--add"
    type="submit"
  >
    +
  </button>
</form>
`;

exports[`user snippets page should render AddSnippet for user page 1`] = `
<form
  className="add-snippet"
  id="add-snippet-form"
  onSubmit={[Function]}
>
  <div
    className="add-snippet__input add-snippet__shortcut"
    contentEditable={true}
    data-placeholder="Key"
    onCopy={[Function]}
    onPaste={[Function]}
    suppressContentEditableWarning={true}
  />
  <div
    className="add-snippet__input add-snippet__text"
    contentEditable={true}
    data-placeholder="Snippet"
    onCopy={[Function]}
    onPaste={[Function]}
  />
  <button
    className="btn btn--secondary btn--shine btn--add"
    type="submit"
  >
    +
  </button>
</form>
`;
